Methods and services structure added
