# back/src/routes/hotelRoutes.ts
@@ -11,6 +11,10 @@ class hotelsRoutes {
 
   config(): void {
     this.router.get('/', hotelsController.getAllHotels);
+    this.router.get('/:id', hotelsController.getHotelsByFilters);
+    this.router.post('/', hotelsController.createHotel);
+    this.router.delete('/:id', hotelsController.deleteHotel);
+    this.router.put('/:id', hotelsController.updateHotel);
   }
 }
 
